--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: none
+
+application:
+  description: Projeto criado no bootcamp DIO - Santander FullStack Developer
