--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,4 +17,4 @@ spring:
       ddl-auto: none
 
 application:
-  description: Projeto criado no bootcamp DIO - Santander FullStack Developer
+  description: Projeto criado no bootcamp DIO - Santander FullStack Developer / Backend
